@@ -24,6 +24,7 @@
 		- Merged in patch for better langague support based on iso-639   Thanks zaphod <zaphod@users.sourceforge.net>
 		- Fixed accesslog not showing the logout field properly.
 		- transy should now be somewhat usable.
+		- Added automatic email of changes to TTS tickets.
 
 [0.9.2] - Fixed sorting bug in currentusers.php
 		- Cleaned up error reporting and form in newaccount.php
